move to Java 19 make a self-documenting endpoint remove hamcrest