@@ -77,7 +77,6 @@
                 <version>3.0.0-M9</version>
                 <configuration combine.self="append">
                     <enableAssertions>true</enableAssertions>
-                    <argLine>--add-opens app/app=ALL-UNNAMED</argLine>
                 </configuration>
                 <dependencies>
                     <dependency>
@@ -198,12 +197,6 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>5.9.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest</artifactId>
-            <version>2.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
